--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.livewallpapers">
+    package="com.example.cutewallpapers">
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LiveWallpapers"
+        android:theme="@style/Theme.CuteWallpapers"
         tools:targetApi="31">
         <activity
-            android:name=".UI.MainActivity"
+            android:name="com.example.cutewallpapers.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.LiveWallpapers.NoActionBar">
+            android:theme="@style/Theme.CuteWallpapers.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,5 +24,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
