--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "LiveWallpapers"
+rootProject.name = "CuteWallpapers"
 include ':app'
